--- a/conversion/Cargo.toml
+++ b/conversion/Cargo.toml
@@ -12,3 +12,6 @@ csv = "^1.1.6"
 glob = "^0.3.0"
 nav-types = "^0.5.1"
 flate2 = "^1.0"
+serde = "1.0.219"
+serde-xml-rs = "0.8.0"
+serde_derive = "1.0.219"
