--- a/conversion/Cargo.toml
+++ b/conversion/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "conversion"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 authors = ["Tim 'tim3z' Zeitz <mail@tim3z.net>"]
 
@@ -12,6 +12,6 @@ csv = "^1.1.6"
 glob = "^0.3.0"
 nav-types = "^0.5.1"
 flate2 = "^1.0"
-serde = "1.0.219"
-serde-xml-rs = "0.8.0"
-serde_derive = "1.0.219"
+serde = "^1.0.0"
+serde-xml-rs = "^0.8.1"
+serde_derive = "^1.0.0"
