refactor: remove compilcated model of network and instead use simple plain xml model provided by sumo

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,14 @@
         "./data/imported/tpgr/example_data/small_road_network"
       ],
       "cwd": "${workspaceFolder}"
+    },
+    {
+      "type": "lldb",
+      "request": "launch",
+      "name": "Debug Preprocess",
+      "program": "${workspaceFolder}/target/debug/sumo-tdcch-preprocessor",
+      "args": ["-i", "./import/sumo/grid/grid"],
+      "cwd": "${workspaceFolder}"
     }
   ]
 }
