--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -52,6 +52,60 @@
       ]
     },
     {
+      "label": "Run DTA (grid; CH)",
+      "type": "shell",
+      "command": "python",
+      "dependsOn": ["Copy duaIterate.py to SUMO", "Clean grid-ch"],
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/grid-ch",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/grid/grid.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/grid/grid.trips.xml",
+        "--routing-algorithm",
+        "CH",
+        "--mesosim",
+        "--aggregation",
+        "30",
+        "--begin",
+        "0",
+        "--end",
+        "90"
+      ]
+    },
+    {
+      "label": "Run DTA (grid; dijkstra)",
+      "type": "shell",
+      "command": "python",
+      "dependsOn": ["Copy duaIterate.py to SUMO", "Clean grid-ch"],
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/grid-ch",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/grid/grid.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/grid/grid.trips.xml",
+        "--mesosim",
+        "--aggregation",
+        "30",
+        "--begin",
+        "0",
+        "--end",
+        "90"
+      ]
+    },
+    {
       "label": "Run DTA (example data)",
       "type": "shell",
       "dependsOn": [
@@ -95,6 +149,17 @@
         "cwd": "${workspaceFolder}/data/imported/sumo"
       },
       "args": ["-rf", "grid/*"],
+      "hide": true
+    },
+
+    {
+      "label": "Clean grid-ch",
+      "type": "shell",
+      "command": "rm",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo"
+      },
+      "args": ["-rf", "grid-ch/*"],
       "hide": true
     },
     {
