--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -6,7 +6,14 @@ edition = "2021"
 build = "build.rs"
 
 [features]
-default = ["tdcch-approx", "tdcch-precustomization", "tdcch-postcustomization", "tdcch-triangle-sorting", "tdcch-query-astar", "tdcch-query-lazy"]
+default = [
+    "tdcch-approx",
+    "tdcch-precustomization",
+    "tdcch-postcustomization",
+    "tdcch-triangle-sorting",
+    "tdcch-query-astar",
+    "tdcch-query-lazy",
+]
 tdcch-disable-par = ["cch-disable-par"]
 cch-disable-par = []
 tdcch-query-detailed-timing = []
@@ -36,4 +43,4 @@ scoped-tls = "^1.0.0"
 chrono = "^0.4.19"
 
 [build-dependencies]
-built = { version = "^0.5.1", features = ["git2", "chrono"] }
+built = { version = "^0.5.1", features = ["chrono"] }
