--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -142,6 +142,42 @@
       ]
     },
     {
+      "label": "Run DTA (karlsruhe)",
+      "type": "shell",
+      "dependsOn": [
+        "Build (debug)",
+        "Copy duaIterate.py to SUMO",
+        "Clean karlsruhe"
+      ],
+      "command": "python",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/karlsruhe",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/karlsruhe/karlsruhe.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/karlsruhe/karlsruhe.trips.xml",
+        "--routing-algorithm",
+        "CCH",
+        "--mesosim",
+        "--aggregation",
+        "900",
+        "--begin",
+        "0",
+        "--end",
+        "36000",
+        "cch-preprocessor--input-prefix",
+        "karlsruhe",
+        "cch-preprocessor--input-dir",
+        "${workspaceFolder}/import/sumo/karlsruhe"
+      ]
+    },
+    {
       "label": "Clean grid",
       "type": "shell",
       "command": "rm",
@@ -183,6 +219,16 @@
       "hide": true
     },
     {
+      "label": "Clean example data",
+      "type": "shell",
+      "command": "rm",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo"
+      },
+      "args": ["-rf", "karlsruhe/*"],
+      "hide": true
+    },
+    {
       "label": "Copy duaIterate.py to SUMO",
       "type": "shell",
       "command": "cp",
@@ -192,7 +238,8 @@
       "args": [
         "fastdta/duaIterate.py",
         "lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py"
-      ]
+      ],
+      "hide": true
     }
   ]
 }
