--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -83,11 +83,16 @@
       "label": "Run DTA (grid; dijkstra)",
       "type": "shell",
       "command": "python",
-      "dependsOn": ["Copy duaIterate.py to SUMO", "Clean grid-dijkstra"],
+      "dependsOn": [
+        "Copy duaIterate.py to SUMO",
+        "Clean grid-dijkstra",
+        "Build (debug)"
+      ],
       "options": {
         "cwd": "${workspaceFolder}/data/imported/sumo/grid-dijkstra",
         "env": {
-          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}"
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}",
+          "RUST_BACKTRACE": "1"
         }
       },
       "args": [
@@ -96,13 +101,19 @@
         "${workspaceFolder}/import/sumo/grid/grid.net.xml",
         "-t",
         "${workspaceFolder}/import/sumo/grid/grid.trips.xml",
+        "--routing-algorithm",
+        "dijkstra-rust",
         "--mesosim",
         "--aggregation",
         "900",
         "--begin",
         "0",
         "--end",
-        "36000"
+        "36000",
+        "dijkstra-preprocessor--input-prefix",
+        "grid",
+        "dijkstra-preprocessor--input-dir",
+        "${workspaceFolder}/import/sumo/grid"
       ]
     },
     {
