--- a/fastdta/Cargo.toml
+++ b/fastdta/Cargo.toml
@@ -8,3 +8,7 @@ clap = { version = "4.5.38", features = ["derive"] }
 rust_road_router = { path = "../engine" }
 conversion = { path = "../conversion" }
 rand = { version = "0.9.1" }
+anyhow = "1.0.0"
+regex = "1.10.6"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1"
