--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -27,7 +27,8 @@
       "options": {
         "cwd": "${workspaceFolder}/data/imported/sumo/grid",
         "env": {
-          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}"
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}",
+          "RUST_BACKTRACE": "1"
         }
       },
       "args": [
@@ -39,8 +40,6 @@
         "--routing-algorithm",
         "CCH",
         "--mesosim",
-        "--max-convergence-deviation",
-        "0.1",
         "--aggregation",
         "900",
         "--begin",
@@ -51,6 +50,26 @@
         "grid",
         "cch-preprocessor--input-dir",
         "${workspaceFolder}/import/sumo/grid"
+      ]
+    },
+    {
+      "label": "Relative Gap (grid)",
+      "type": "shell",
+      "command": "sumo-relative-gap-calculator",
+      "dependsOn": ["Build (debug)"],
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/grid",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${env:PATH}"
+        }
+      },
+      "args": [
+        "--net-dir",
+        "${workspaceFolder}/import/sumo/grid",
+        "--net-prefix",
+        "grid",
+        "--trips-file",
+        "${workspaceFolder}/import/sumo/grid/grid.trips.xml"
       ]
     },
     {
@@ -78,7 +97,9 @@
         "--begin",
         "0",
         "--end",
-        "36000"
+        "36000",
+        "duarouter--write-costs",
+        "true"
       ]
     },
     {
@@ -112,6 +133,8 @@
         "0",
         "--end",
         "36000",
+        "duarouter--write-costs",
+        "true",
         "dijkstra-preprocessor--input-prefix",
         "grid",
         "dijkstra-preprocessor--input-dir",
