refactor: rename argument "rel-gap" to "relative-gap" to be more verbose

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -46,7 +46,7 @@
         "0",
         "--end",
         "36000",
-        "--rel-gap",
+        "--relative-gap",
         "0.001",
         "cch-preprocessor--input-prefix",
         "grid",
@@ -104,7 +104,7 @@
         "0",
         "--end",
         "36000",
-        "--rel-gap",
+        "--relative-gap",
         "0.001",
         "duarouter--write-costs",
         "true",
