--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -91,7 +91,6 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
-        "--nointernal-link",
         "sumo--default.speeddev",
         "0.0",
         "cch-preprocessor--input-prefix",
@@ -138,7 +137,6 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
-        "--nointernal-link",
         "sumo--default.speeddev",
         "0.0",
         "relative-gap--net-prefix",
@@ -238,7 +236,7 @@
       ]
     },
     {
-      "label": "Run DTA (example data)",
+      "label": "Run DTA (suboptimal routing)",
       "type": "shell",
       "dependsOn": [
         "Build (debug)",
@@ -255,9 +253,9 @@
       "args": [
         "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
         "-n",
-        "${workspaceFolder}/import/sumo/example-data/example-data.net.xml",
+        "${workspaceFolder}/import/sumo/suboptimal-routing/suboptimal-routing.net.xml",
         "-t",
-        "${workspaceFolder}/import/sumo/example-data/example-data.trips.xml",
+        "${workspaceFolder}/import/sumo/suboptimal-routing/suboptimal-routing.trips.xml",
         "--routing-algorithm",
         "CCH",
         "--mesosim",
@@ -270,13 +268,43 @@
         "-f",
         "0",
         "-l",
-        "30",
+        "2",
         "cch-preprocessor--input-prefix",
-        "example-data",
+        "suboptimal-routing",
         "cch-preprocessor--input-dir",
-        "${workspaceFolder}/import/sumo/example-data",
-        "cch-router--no-write-sumo-alternatives",
-        "True"
+        "${workspaceFolder}/import/sumo/suboptimal-routing"
+      ]
+    },
+    {
+      "label": "Run DTA (suboptimal routing - sumo)",
+      "type": "shell",
+      "dependsOn": ["Build (debug)", "Copy duaIterate.py to SUMO"],
+      "command": "python",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/example-data",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/suboptimal-routing/suboptimal-routing.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/suboptimal-routing/suboptimal-routing.trips.xml",
+        "--routing-algorithm",
+        "dijkstra",
+        "--mesosim",
+        "--aggregation",
+        "900",
+        "--begin",
+        "0",
+        "--end",
+        "36000",
+        "-f",
+        "1",
+        "-l",
+        "2"
       ]
     },
     {
