debug: configured an example, where sumo does not compute the shortest path

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -139,6 +139,7 @@
         "0.0000001",
         "sumo--default.speeddev",
         "0.0",
+        "duarouter--weights.interpolate",
         "relative-gap--net-prefix",
         "grid",
         "relative-gap--net-dir",
@@ -182,6 +183,7 @@
         "0.0000001",
         "sumo--default.speeddev",
         "0.0",
+        "duarouter--weights.interpolate",
         "relative-gap--net-prefix",
         "grid",
         "relative-gap--net-dir",
@@ -260,15 +262,17 @@
         "CCH",
         "--mesosim",
         "--aggregation",
-        "900",
+        "60",
         "--begin",
         "0",
         "--end",
-        "36000",
+        "1800",
         "-f",
         "0",
         "-l",
         "2",
+        "sumo--default.speeddev",
+        "0.0",
         "cch-preprocessor--input-prefix",
         "suboptimal-routing",
         "cch-preprocessor--input-dir",
@@ -296,15 +300,18 @@
         "dijkstra",
         "--mesosim",
         "--aggregation",
-        "900",
+        "60",
         "--begin",
         "0",
         "--end",
-        "36000",
+        "1800",
         "-f",
         "1",
         "-l",
-        "2"
+        "2",
+        "sumo--default.speeddev",
+        "0.0",
+        "duarouter--weights.interpolate"
       ]
     },
     {
