--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -104,6 +104,53 @@
       ]
     },
     {
+      "label": "Run DTA (random)",
+      "type": "shell",
+      "command": "python",
+      "dependsOn": [
+        "Build (release)",
+        "Copy duaIterate.py to SUMO",
+        "Clean random"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/random",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/release/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}",
+          "RUST_BACKTRACE": "1"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/random/random.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/random/random.trips.xml",
+        "--routing-algorithm",
+        "CCH",
+        "--mesosim",
+        "--aggregation",
+        "300",
+        "--begin",
+        "0",
+        "--end",
+        "86400",
+        "--relative-gap",
+        "0.0001",
+        "--max-convergence-deviation",
+        "0.0000001",
+        "sumo--default.speeddev",
+        "0.0",
+        "cch-preprocessor--input-prefix",
+        "random",
+        "cch-preprocessor--input-dir",
+        "${workspaceFolder}/import/sumo/random",
+        "relative-gap--net-prefix",
+        "random",
+        "relative-gap--net-dir",
+        "${workspaceFolder}/import/sumo/random"
+      ]
+    },
+    {
       "label": "Run DTA (grid; CH)",
       "type": "shell",
       "command": "python",
@@ -239,6 +286,7 @@
     },
     {
       "label": "init subopt.-ex",
+      "hide": true,
       "type": "shell",
       "dependsOn": ["suboptimal-routing (initial)"],
       "command": "cp",
@@ -252,6 +300,7 @@
     },
     {
       "label": "subopt.-ex. (cch)",
+      "hide": true,
       "type": "shell",
       "dependsOn": [],
       "command": "python",
@@ -290,6 +339,7 @@
     },
     {
       "label": "subopt.-ex. (sumo)",
+      "hide": true,
       "type": "shell",
       "dependsOn": [],
       "command": "python",
@@ -333,7 +383,16 @@
       "args": ["-rf", "grid/*"],
       "hide": true
     },
-
+    {
+      "label": "Clean random",
+      "type": "shell",
+      "command": "rm",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo"
+      },
+      "args": ["-rf", "random/*"],
+      "hide": true
+    },
     {
       "label": "Clean grid-ch",
       "type": "shell",
