refactor: adapt duaiterate to call fastdta, move reusable methods to separate file

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -138,6 +138,14 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
+        "duarouter--precision",
+        "6",
+        "sumo--default.speeddev",
+        "0.0",
+        "sumo--step-length",
+        "0.1",
+        "sumo--precision",
+        "6",
         "sumo--default.speeddev",
         "0.0",
         "cch-preprocessor--input-prefix",
@@ -175,7 +183,7 @@
         "CH",
         "--mesosim",
         "--aggregation",
-        "300",
+        "60",
         "--begin",
         "0",
         "--end",
@@ -184,8 +192,14 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
+        "duarouter--precision",
+        "6",
         "sumo--default.speeddev",
         "0.0",
+        "sumo--step-length",
+        "0.1",
+        "sumo--precision",
+        "6",
         "duarouter--weights.interpolate",
         "relative-gap--net-prefix",
         "grid",
