--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -38,6 +38,7 @@
     },
     {
       "label": "Compare Routes (grid)",
+      "hide": true,
       "type": "shell",
       "command": "sumo-routes-comparator",
       "dependsOn": ["Build (debug)"],
@@ -54,6 +55,53 @@
         "grid",
         "--trips-file",
         "${workspaceFolder}/import/sumo/grid/grid.trips.xml"
+      ]
+    },
+    {
+      "label": "Run DTA (long-road)",
+      "type": "shell",
+      "command": "python",
+      "dependsOn": [
+        "Build (debug)",
+        "Copy duaIterate.py to SUMO",
+        "Clean long-road"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/long-road",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}",
+          "RUST_BACKTRACE": "1"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/long-road/long-road.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/long-road/long-road.trips.xml",
+        "--routing-algorithm",
+        "CCH",
+        "--mesosim",
+        "--aggregation",
+        "300",
+        "--begin",
+        "0",
+        "--end",
+        "12000",
+        "--relative-gap",
+        "0.0001",
+        "--max-convergence-deviation",
+        "0.0000001",
+        "sumo--default.speeddev",
+        "0.0",
+        "cch-preprocessor--input-prefix",
+        "long-road",
+        "cch-preprocessor--input-dir",
+        "${workspaceFolder}/import/sumo/long-road",
+        "relative-gap--net-prefix",
+        "long-road",
+        "relative-gap--net-dir",
+        "${workspaceFolder}/import/sumo/long-road"
       ]
     },
     {
@@ -447,6 +495,16 @@
         "cwd": "${workspaceFolder}/data/imported/sumo"
       },
       "args": ["-rf", "grid/*"],
+      "hide": true
+    },
+    {
+      "label": "Clean long-road",
+      "type": "shell",
+      "command": "rm",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo"
+      },
+      "args": ["-rf", "long-road/*"],
       "hide": true
     },
     {
