--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -18,6 +18,7 @@
 
     {
       "label": "Relative Gap (grid)",
+      "hide": true,
       "type": "shell",
       "command": "sumo-relative-gap-calculator",
       "dependsOn": ["Build (debug)"],
@@ -105,7 +106,55 @@
       ]
     },
     {
+      "label": "Run FastDTA (long-road)",
+      "type": "shell",
+      "command": "python",
+      "dependsOn": [
+        "Build (debug)",
+        "Copy duaIterate.py to SUMO",
+        "Clean long-road-fast-dta"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/long-road-fast-dta",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}",
+          "RUST_BACKTRACE": "1"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/long-road/long-road.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/long-road/long-road.trips.xml",
+        "--routing-algorithm",
+        "fastdta",
+        "--mesosim",
+        "--aggregation",
+        "300",
+        "--begin",
+        "0",
+        "--end",
+        "12000",
+        "--relative-gap",
+        "0.0001",
+        "--max-convergence-deviation",
+        "0.0000001",
+        "sumo--default.speeddev",
+        "0.0",
+        "fastdta-preprocessor--input-prefix",
+        "long-road",
+        "fastdta-preprocessor--input-dir",
+        "${workspaceFolder}/import/sumo/long-road",
+        "relative-gap--net-prefix",
+        "long-road",
+        "relative-gap--net-dir",
+        "${workspaceFolder}/import/sumo/long-road"
+      ]
+    },
+    {
       "label": "Run DTA (grid)",
+      "hide": true,
       "type": "shell",
       "command": "python",
       "dependsOn": [
@@ -309,6 +358,7 @@
     },
     {
       "label": "Run DTA (grid; dijkstra)",
+      "hide": true,
       "type": "shell",
       "command": "python",
       "dependsOn": [
@@ -352,7 +402,55 @@
       ]
     },
     {
+      "label": "Run DTA (random; dijkstra-rust)",
+      "type": "shell",
+      "command": "python",
+      "dependsOn": [
+        "Copy duaIterate.py to SUMO",
+        "Clean random-dijkstra-rust",
+        "Build (debug)"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/random-dijkstra-rust",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}",
+          "RUST_BACKTRACE": "1"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/random/random.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/random/random.trips.xml",
+        "--routing-algorithm",
+        "dijkstra-rust",
+        "--mesosim",
+        "--aggregation",
+        "300",
+        "--begin",
+        "0",
+        "--end",
+        "12000",
+        "--relative-gap",
+        "0.0001",
+        "--max-convergence-deviation",
+        "0.0000001",
+        "sumo--default.speeddev",
+        "0.0",
+        "dijkstra-preprocessor--input-prefix",
+        "random",
+        "dijkstra-preprocessor--input-dir",
+        "${workspaceFolder}/import/sumo/random",
+        "relative-gap--net-prefix",
+        "random",
+        "relative-gap--net-dir",
+        "${workspaceFolder}/import/sumo/random"
+      ]
+    },
+    {
       "label": "Run DTA (grid; dijkstra-rust)",
+      "hide": true,
       "type": "shell",
       "command": "python",
       "dependsOn": [
@@ -508,6 +606,16 @@
       "hide": true
     },
     {
+      "label": "Clean long-road-fast-dta",
+      "type": "shell",
+      "command": "rm",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo"
+      },
+      "args": ["-rf", "long-road-fast-dta/*"],
+      "hide": true
+    },
+    {
       "label": "Clean random",
       "type": "shell",
       "command": "rm",
@@ -545,6 +653,17 @@
         "cwd": "${workspaceFolder}/data/imported/sumo"
       },
       "args": ["-rf", "grid-dijkstra/*"],
+      "hide": true
+    },
+
+    {
+      "label": "Clean random-dijkstra-rust",
+      "type": "shell",
+      "command": "rm",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo"
+      },
+      "args": ["-rf", "random-dijkstra-rust/*"],
       "hide": true
     },
     {
