refactor: print which samples are used in fastdta

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -300,6 +300,10 @@
         "random",
         "fastdta-preprocessor--input-dir",
         "${workspaceFolder}/import/sumo/random",
+        "fastdta-router--samples",
+        "0.9",
+        "fastdta-router--samples",
+        "0.1",
         "relative-gap--net-prefix",
         "random",
         "relative-gap--net-dir",
