--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -230,7 +230,7 @@
         "--begin",
         "0",
         "--end",
-        "36000",
+        "86400",
         "--relative-gap",
         "0.0001",
         "--max-convergence-deviation",
@@ -300,10 +300,12 @@
         "random",
         "fastdta-preprocessor--input-dir",
         "${workspaceFolder}/import/sumo/random",
-        "fastdta-router--samples",
-        "0.9",
+        "fastdta-router--vdf",
+        "bpr",
         "fastdta-router--samples",
         "0.1",
+        "fastdta-router--samples",
+        "0.9",
         "relative-gap--net-prefix",
         "random",
         "relative-gap--net-dir",
@@ -347,13 +349,13 @@
         "0.0000001",
         "duarouter--precision",
         "6",
+        "duarouter--weights.interpolate",
         "sumo--default.speeddev",
         "0.0",
         "sumo--step-length",
         "0.1",
         "sumo--precision",
         "6",
-        "duarouter--weights.interpolate",
         "relative-gap--net-prefix",
         "grid",
         "relative-gap--net-dir",
@@ -435,7 +437,7 @@
         "--begin",
         "0",
         "--end",
-        "12000",
+        "86400",
         "--relative-gap",
         "0.0001",
         "--max-convergence-deviation",
@@ -446,6 +448,52 @@
         "random",
         "dijkstra-preprocessor--input-dir",
         "${workspaceFolder}/import/sumo/random",
+        "relative-gap--net-prefix",
+        "random",
+        "relative-gap--net-dir",
+        "${workspaceFolder}/import/sumo/random"
+      ]
+    },
+    {
+      "label": "Run DTA (random; dijkstra)",
+      "type": "shell",
+      "command": "python",
+      "dependsOn": [
+        "Copy duaIterate.py to SUMO",
+        "Clean random-dijkstra",
+        "Build (debug)"
+      ],
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo/random-dijkstra",
+        "env": {
+          "PATH": "${workspaceFolder}:${workspaceFolder}/lib/InertialFlowCutter/build:${workspaceFolder}/target/debug/:${workspaceFolder}/lib/libsumo/bin/:${env:PATH}",
+          "RUST_BACKTRACE": "1"
+        }
+      },
+      "args": [
+        "${workspaceFolder}/lib/libsumo/lib/python3.12/site-packages/sumo/tools/assign/duaIterate.py",
+        "-n",
+        "${workspaceFolder}/import/sumo/random/random.net.xml",
+        "-t",
+        "${workspaceFolder}/import/sumo/random/random.trips.xml",
+        "--routing-algorithm",
+        "dijkstra",
+        "--mesosim",
+        "--aggregation",
+        "300",
+        "--begin",
+        "0",
+        "--end",
+        "86400",
+        "--relative-gap",
+        "0.0001",
+        "--max-convergence-deviation",
+        "0.0000001",
+        "duarouter--precision",
+        "6",
+        "duarouter--weights.interpolate",
+        "sumo--default.speeddev",
+        "0.0",
         "relative-gap--net-prefix",
         "random",
         "relative-gap--net-dir",
@@ -659,7 +707,16 @@
       "args": ["-rf", "grid-dijkstra/*"],
       "hide": true
     },
-
+    {
+      "label": "Clean random-dijkstra",
+      "type": "shell",
+      "command": "rm",
+      "options": {
+        "cwd": "${workspaceFolder}/data/imported/sumo"
+      },
+      "args": ["-rf", "random-dijkstra/*"],
+      "hide": true
+    },
     {
       "label": "Clean random-dijkstra-rust",
       "type": "shell",
