build: set logit as route choice method

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -235,6 +235,13 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
+        "--logit",
+        "--logitbeta",
+        "1.0",
+        "--logitgamma",
+        "1.0",
+        "--logittheta",
+        "1.0",
         "duarouter--precision",
         "6",
         "sumo--step-length",
@@ -288,6 +295,13 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
+        "--logit",
+        "--logitbeta",
+        "1.0",
+        "--logitgamma",
+        "1.0",
+        "--logittheta",
+        "1.0",
         "duarouter--precision",
         "6",
         "sumo--step-length",
@@ -442,6 +456,13 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
+        "--logit",
+        "--logitbeta",
+        "1.0",
+        "--logitgamma",
+        "1.0",
+        "--logittheta",
+        "1.0",
         "sumo--default.speeddev",
         "0.0",
         "dijkstra-preprocessor--input-prefix",
@@ -489,6 +510,13 @@
         "0.0001",
         "--max-convergence-deviation",
         "0.0000001",
+        "--logit",
+        "--logitbeta",
+        "1.0",
+        "--logitgamma",
+        "1.0",
+        "--logittheta",
+        "1.0",
         "duarouter--precision",
         "6",
         "duarouter--weights.interpolate",
